@@ -19,7 +19,7 @@
 ;;
 ;; Author:     Eduardo Ochs <eduardoochs@gmail.com>
 ;; Maintainer: Eduardo Ochs <eduardoochs@gmail.com>
-;; Version:    20220218
+;; Version:    20220225
 ;; Keywords:   e-scripts
 ;;
 ;; Latest version: <http://angg.twu.net/eev-current/eev-tlinks.el>
@@ -2501,31 +2501,19 @@ sudo ./install-tl -select-repository
 ;;;                   
 ;; «ee-0x0-upload-region»  (to ".ee-0x0-upload-region")
 ;; Needs: https://melpa.org/#/0x0
+;;        (find-epackage-links '0x0)
 ;;   See: https://lists.gnu.org/archive/html/eev/2021-08/msg00000.html
 ;;
 (defvar ee-0x0-url nil
   "The last URL generated by a call to `ee-0x0-upload-region'.")
 
-(defun ee-0x0-upload (&rest rest)
-  "This should work like `0x0-upload'. Redefine if needed."
-  (apply '0x0-upload rest))
-
-;; If you are using a version of 0x0 that doesn't have `0x0-upload'
-;; then try using the hack below. See:
-;;   https://gitlab.com/willvaughn/emacs-0x0/-/issues/2
-;;
-;; Based on: (find-efunction '0x0-upload-kill-ring)
-' (defun ee-0x0-upload (b e server-old)
-    "This is a hack. See the source code."
-    (let ((server (0x0--choose-server))
-	  (region-contents (buffer-substring-no-properties b e)))
-      (with-temp-buffer
-	(insert region-contents)
-	(let* ((file-name (or (buffer-file-name) (buffer-name) "kill-ring.txt"))
-               (bounds (0x0--make-bounds))
-               (size (0x0--bounds-size bounds))
-               (resp (0x0--send server file-name bounds)))
-	  (0x0--handle-resp server size resp)))))
+(defun ee-0x0-upload (b e &rest ignore)
+  "Upload the current region using `0x0-dwim'.
+See: https://gitlab.com/willvaughn/emacs-0x0/-/issues/2
+This is a hack."
+  (deactivate-mark 'force)
+  (eek "C-x C-x C-x C-x     ;; reactivate the mark
+        M-x 0x0-dwim RET"))
 
 (defun ee-0x0-upload-region (b e)
   "Upload the current region to 0x0 and show some elisp hyperlinks.
