@@ -1,3 +1,7 @@
+2022-02-25  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-tlinks.el (ee-0x0-upload): rewritten.
+
 2022-02-24  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-kla.el: new file.
